Cpot Edit: minor glitches fixed  - <Cpot_PreviewPatch> using font-size 0 prevents gap between rows of blocks - but why did that suddenly become a problem?  - <WgDropDown> - fixed handling of 'className' prop  - "CpotEdit_Section_BeneathTable.css" there was an ommission when some days ago I was replacing className "dropdown" with "WgDropDown".

--- a/react-pgt/public/css/Cpot/CpotEdit_Section_BeneathTable.css
+++ b/react-pgt/public/css/Cpot/CpotEdit_Section_BeneathTable.css
@@ -108,9 +108,9 @@
 }
 
 .MainTab_CpotEdit .mainDropdowns .dropbtn{
-    width: 92px;
+    width: 90px;
 }
 
-.MainTab_CpotEdit .mainDropdowns .dropdown{
+.MainTab_CpotEdit .mainDropdowns .WgDropDown{
     margin-right: 5px;
 }
