--- a/react-pgt/public/css/Cpot/Cpot_PreviewPatch.css
+++ b/react-pgt/public/css/Cpot/Cpot_PreviewPatch.css
@@ -6,6 +6,7 @@ table.Cpot_PreviewPatch{
     background-color: white;
     border: 1px solid black;
     border-spacing: 0px;
+    font-size: 0;
 }
 
 table.Cpot_PreviewPatch tbody{
